fix(development-process-section): fix layout of list items in stage on mobile

--- a/frontend/src/widgets/development-process-section/ui/mobile-development-process-section/mobile-development-process-section.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/mobile-development-process-section/mobile-development-process-section.module.scss
@@ -1,7 +1,7 @@
 .stageList {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 
 .stageList__item {
@@ -14,8 +14,23 @@
   color: var(--md-sys-color-tertiary);
   font-size: 18px;
   font-weight: 600;
+  margin-bottom: 8px;
 }
 
-.stageDescription {
-  max-width: 434px;
+.stageDescriptionlist {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+
+  .listItem {
+    display: flex;
+    gap: 3px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
+  }
+
+  .stageDescription {
+    max-width: 434px;
+  }
 }
